Fixed cards alignment

--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -25,13 +25,10 @@
     flex-wrap: wrap;
     align-content: space-around;
 
-    &> *:not(:first-child){
-      margin-left: 5rem;
-    }
-
     &> *{
       margin-top: 10rem;
       margin-bottom: 10rem;
+      margin-left: 5rem;
     }
 
     &-addcity{
